Minor text tweaks

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
   <body>
-  <div>You got a review.</div>
+  <div>Type in something to tweet</div>
   <div>
-  <input id="review" type="text" size="130" />
+  <input id="review" type="text" size="100" />
   </div>
   <button id="retweet">Post to Twitter</button>
   <div id="message"></div>
