--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <title>Sample Widget</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.js"></script>
     <script type="text/javascript" src="script.js"></script>
-</head>
+  </head>
   <body>
-  <div>Type in something to tweet</div>
-  <div>
-  <input id="review" type="text" size="100" />
-  </div>
-  <button id="retweet">Post to Twitter</button>
-  <div id="message"></div>
+     Default page
   </body>
 </html>
