--- a/review.html
+++ b/review.html
@@ -4,9 +4,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <title>Sample Widget</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.0.3.js"></script>
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="review.js"></script>
 </head>
   <body>
+  <div>You have a review</div>
+  <div>&nbsp;</div>
   <div id="customerName"></div>
   <div id="customerEmail"></div>
   <div id="review"></div>
